# mre-write_to

./: Cargo.toml  README.md
src/: main.rs  write_to.rs
