[package]
name = "test-write-to"
version = "0.1.0"
authors = ["Berkus Decker <berkus+cargo@metta.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 's'
panic = "abort"
